RESOLVED FIXED49770
WebKit2: Safari shouldn't auto-activate plug-ins in background tabs.
https://bugs.webkit.org/show_bug.cgi?id=49770
Summary WebKit2: Safari shouldn't auto-activate plug-ins in background tabs.
Brian Weinstein
Reported 2010-11-18 17:05:48 PST
WebKit2: Safari shouldn't auto-activate plug-ins in background tabs.
Attachments
[PATCH] Fix (4.12 KB, patch)
2010-11-18 17:07 PST, Brian Weinstein
aroben: review+
bweinstein: commit-queue-
Brian Weinstein
Comment 1 2010-11-18 17:07:16 PST
Created attachment 74323 [details] [PATCH] Fix
Brian Weinstein
Comment 2 2010-11-18 17:12:36 PST
Landed in r72352.
Note You need to log in before you can comment on or make changes to this bug.